<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackATrail</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="about_tyson">Tyson Seaborn</string>
    <string name="about_mike">Mike Uetz</string>
    <string name="about_becky">Becky Harris</string>
    <string name="about_year">2014</string>
    <string name="title_activity_start_route">Start Route</string>
    <string name="start_route_start_button">Start Tracking</string>
    <string name="start_route_save_button">Save Route</string>
    <string name="title_activity_saved_route">Saved Route</string>
    <string name="title_activity_register">Register</string>

    <!-- Register User Strings -->
    <string name="username">Username</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="signup">Register</string>
    <string name="title_activity_save_route">Save Route</string>
    <string name="routemgr_startnewroute">Start New Route</string>

    <!-- Route Manager strings -->
    <string name="title_activity_route_manager">Route Manager</string>
    <string name="route_manager">Route Manager</string>

    <!-- Save Route Strings -->
    <string name="routename">Route Name</string>
    <string name="routedescription">Route Description</string>
    <string name="routecctivity">Route Activity</string>
    <string name="routedistance">Route Distance:</string>
    <string name="routeSave">Save Route</string>

    <!-- Main Menu strings -->
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="mainmenu">Main Menu</string>
    <string name="myprofile">Profile</string>
    <string name="myroutes">My Routes</string>
    <string name="mysettings">Settings</string>
    <string name="myabout">About</string>
    <string name="title_activity_profile_menu">Profile</string>

    <!-- Password Popup strings -->
    <string name="passpopuppassword">Enter Password:</string>
    <string name="passpopupconfirm">Re-enter Password:</string>
    <string name="passpopupsubmit">Submit</string>
    <string name="passpopupcancel">Cancel</string>
    <string name="passmatch">Passwords match</string>
    <string name="passnomatch">Passwords do not match</string>

    <!-- Profile strings -->
    <string name="update">Update</string>
    <string name="submit">Submit</string>

    <!-- Saved Route strings -->
    <string name="editroute">Edit Route Info</string>
    <string name="editroutecategory">Category:</string>
    <string name="editroutetitle">Title:</string>
    <string name="editroutedescription">Description:</string>
    <string name="editroutedistancetitle">Distance:</string>
    <string name="deleteroute">Delete Route</string>
</resources>
