<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tyson.trackatrail.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Profile Registration"
            android:id="@+id/textView" />

        <Space
            android:layout_width="20dp"
            android:layout_height="25dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/username"
            android:ems="10"
            android:id="@+id/editText" />

        <Space
            android:layout_width="16dp"
            android:layout_height="25dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstname_lastname">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/firstname"
                android:ems="10"
                android:id="@+id/editText6" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/lastname"
                android:ems="10"
                android:id="@+id/editText7" />

        </LinearLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="25dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText8"
                android:text="@string/password" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText9"
                android:text="@string/confirmpassword" />

        </LinearLayout>

        <Space
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/email"
            android:ems="10"
            android:id="@+id/editText10" />

        <Space
            android:layout_width="20dp"
            android:layout_height="100dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/signup"
            android:id="@+id/button" />

    </LinearLayout>

</RelativeLayout>
