<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tyson.trackatrail.MainMenuActivity">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnProfile">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewMainMenu"
            android:background="@drawable/trackatrailbanner"
            android:layout_centerInParent="true" />
    </RelativeLayout>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/myprofile"
        android:id="@+id/btnProfile"
        android:onClick="onButtonClick"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/btnMyRoutes"
        android:layout_alignEnd="@+id/btnMyRoutes"
        android:layout_alignLeft="@+id/btnMyRoutes"
        android:layout_alignStart="@+id/btnMyRoutes" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/myroutes"
        android:id="@+id/btnMyRoutes"
        android:onClick="onButtonClick"
        android:layout_below="@+id/btnProfile"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myabout"
        android:id="@+id/btnAbout"
        android:singleLine="false"
        android:layout_below="@+id/btnMyRoutes"
        android:layout_alignLeft="@+id/btnMyRoutes"
        android:layout_alignStart="@+id/btnMyRoutes"
        android:layout_alignRight="@+id/btnMyRoutes"
        android:layout_alignEnd="@+id/btnMyRoutes"
        android:onClick="onButtonClick" />

</RelativeLayout>
