<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tyson.trackatrail.SaveRouteActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/routename"
            android:ems="10"
            android:id="@+id/editText" />

        <Space
            android:layout_width="20dp"
            android:layout_height="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textPersonName"
            android:text="@string/routedescription"
            android:ems="10"
            android:id="@+id/editText3" />

        <Space
            android:layout_width="20dp"
            android:layout_height="25dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner" />

        <Space
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView"
                android:text="@string/routedistance" />

            <Space
                android:layout_width="100dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="343km"
                android:id="@+id/textView2" />

        </LinearLayout>

        <Space
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/routetime"
                android:id="@+id/textView3" />

            <Space
                android:layout_width="100dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="00:34:23"
                android:id="@+id/textView4" />

        </LinearLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="50dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/routeSave"
            android:id="@+id/button" />

    </LinearLayout>

</RelativeLayout>
